# haystack-memory

./: Example.ipynb  LICENSE  README.md  example.py  pyproject.toml
HaystackAgentBasicMemory/: Agentchat.py  MemoryRecallNode.py  SaveToMemory.py
HaystackMemory/: memory.py  prompt_templates.py  utils.py
examples/: example_basic_memory.ipynb  example_redis_memory.ipynb
haystack_memory/: prompt_templates.py  utils.py
